--- a/css/main.css
+++ b/css/main.css
@@ -59,7 +59,22 @@ figure {
   border-radius:10px ;
   padding:0.75em 0.75em 3em 0.75em;
   text-align:center;
+  vertical-align:center;
   margin:0em 0.5em;
+}
+.source {
+  color:white;
+  margin: 1.5em;
+}
+
+footer{
+  background-color:#79756f;
+  padding: 0.25em 0em;
+
+}
+
+footer li {
+  padding: 0 0 .5em 0;
 }
 
 img {
@@ -185,3 +200,6 @@ i.round {
   color:#a19997;
   font-weight:normal;
 }
+ dd {
+   padding:0 0 1.5em 0;
+ }
